test/sema/typeck/impl/missing-trait-method.dora
trait A { fn f(): Int64; }
trait B: A { fn g(): Int64; }
trait C: B { fn h(): Int64; }

impl A for Int64 {
    fn f(): Int64 { 100 }
}

impl B for Int64 {
    fn g(): Int64 { 200 }
}

impl C for Int64 {
    fn g(): Int64 { 300 }
}

fn f(x: Int64) {
    x.f();
    x.g();
    x.h();
}
